--- a/arch/arm64/configs/custom_defconfig
+++ b/arch/arm64/configs/custom_defconfig
@@ -641,6 +641,7 @@ CONFIG_XFRM_USER=y
 CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
+# CONFIG_L2TP_SHA256_SUPPORT_DCM is not set
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
@@ -2511,6 +2512,7 @@ CONFIG_VIDEO_EXYNOS_FIMC_IS=y
 CONFIG_USE_VENDER_FEATURE=y
 CONFIG_ENABLE_HAL3_2_META_INTERFACE=y
 # CONFIG_TORCH_CURRENT_CHANGE_SUPPORT is not set
+# CONFIG_INIT_TORCH_CURRENT_SUPPORT is not set
 # CONFIG_MODULE_ALL_INCLUDE is not set
 # CONFIG_CAMERA_SENSOR_8B1 is not set
 # CONFIG_CAMERA_SENSOR_6D1 is not set
