Update defconfig to enable Vibetonz

--- a/arch/arm64/configs/custom_defconfig
+++ b/arch/arm64/configs/custom_defconfig
@@ -3791,7 +3791,7 @@ CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_THERMAL_OFFSET=y
 CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_ODT_OFF=y
 CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_ADV_MIF_THERMAL_POLLING=y
 # CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_TDNR is not set
-CONFIG_MOTOR_DRV_MAX77843=y
+CONFIG_VIBETONZ=y
 # CONFIG_MOTOR_DRV_ISA1200 is not set
 # CONFIG_MOTOR_DRV_ISA1400 is not set
 # CONFIG_HAPTIC_ISA1200 is not set
